# FRI-V-Toolkit

./: .clang-format  .gitignore  CMakeLists.txt  README.md  linker.ld
benchmarks/: CMakeLists.txt
benchmarks/coremark/: CMakeLists.txt  core_list_join.c  core_portme.c  core_portme.h  core_state.c  coremark.h  cvt.c  ee_printf.c
calclib/: CMakeLists.txt
calclib/include/calclib/: lex.h  parse.h
calclib/src/: CMakeLists.txt  lex.c  parse.c
cmake/: riscv.cmake
libnosys/src/: CMakeLists.txt  chown.c  close.c  execve.c  fork.c  fstat.c  getpid.c  gettod.c  isatty.c  kill.c  link.c  lseek.c  open.c  read.c  readlink.c  sbrk.c  stat.c  symlink.c  times.c  unlink.c  wait.c  write.c
programs/: CMakeLists.txt
programs/calculator/: CMakeLists.txt  calculator.c
programs/echo/: CMakeLists.txt  echo.c
programs/snake/include/snake/: snake.h
programs/snake/src/: CMakeLists.txt  game.c  snake.c
system/include/system/: assert.h  cache.h  interrupts.h  plic.h  time.h  uart.h  uprintf.h
system/src/: CMakeLists.txt  cache.c  crt0.s  interrupts.c  plic.c  startup.c  time.c  uart.c  uprintf.c
tests/: CMakeLists.txt
tests/bypass_test/: CMakeLists.txt  bypass_test_1.s  bypass_test_2.s  bypass_test_3.s  bypass_test_4.s  bypass_test_5.s
tests/calc_test/: CMakeLists.txt  det_test.c  dot_test.c  pi_test.c
tests/exception_test/: CMakeLists.txt  breakpoint_test.c  direct_external_interrupt_test.s  direct_software_interrupt_test.s  direct_timer_interrupt_test.s  disabled_external_interrupt_test.s  disabled_software_interrupt_test.s  disabled_timer_interrupt_test.s  illegal_instruction_test.c  instruction_access_fault_test.c  instruction_address_misaligned_test.c  load_access_fault_test.c  load_address_misaligned_test.c  machine_system_call_test.c  plic_access_fault_test.c  rom_access_fault_test.c  software_interrupt_test.c  software_interrupt_test.s  store_access_fault_test.c  store_address_misaligned_test.c  timer_access_fault_test.c  uart_access_fault_test.c
tests/fail_test/: CMakeLists.txt
tests/fib_test/: CMakeLists.txt  fib_test.c
tests/malloc_test/: CMakeLists.txt  malloc_test_0.c  malloc_test_1.c  malloc_test_2.c
tests/memory_test/: CMakeLists.txt  sbyte_access_test.s  sbyte_test.c  shword_access_test.s  shword_test.c  ubyte_access_test.s  ubyte_test.c  uhword_access_test.s  uhword_test.c  word_test.c
tests/pass_test/: CMakeLists.txt
tests/qsort_test/: CMakeLists.txt  qsort_test.c
tests/timer_test/: CMakeLists.txt  timer_test_0.c  timer_test_1.c
tests/uart_test/: CMakeLists.txt  uart_freq_size_test.c  uart_test.c
tests/uart_test_int/: CMakeLists.txt  uart_int_test_0.c  uart_int_test_1.c
tools/: memgen  memgen.c  memgen.cpp
