get_current_folder_name(TARGET_FOLDER_NAME)

if (BUILD_TESTS)
    add_subdirectory(exception_test)
    add_subdirectory(fib_test)
    add_subdirectory(pass_test)
    add_subdirectory(fail_test)
    add_subdirectory(malloc_test)
    add_subdirectory(memory_test)
    add_subdirectory(qsort_test)
    add_subdirectory(timer_test)
    add_subdirectory(uart_test)
    add_subdirectory(uart_test_int)
    add_subdirectory(calc_test)
    add_subdirectory(bypass_test)
endif()